# gat

./: .env.example  .gitignore  .gitmodules  AGENTS.md  CHANGELOG.md  Cargo.toml  IMPLEMENTATION_GAPS.md  LICENSE.txt  OPEN_ISSUES_SUMMARY.md  PHASE_6_PLAN.md  README.md  RELEASE_PROCESS.md  REVIEW_SUMMARY.md  ROADMAP.md  ROADMAP_REVIEW_INDEX.md  ROADMAP_STATUS.md  package-lock.json  test_clarabel_simple.rs
crates/gat-adms/: Cargo.toml  README.md
crates/gat-adms/src/: lib.rs  reliability_integration.rs
crates/gat-adms/tests/: integration_with_reliability.rs
crates/gat-algo/: Cargo.toml  SOCP_RELAXATION_DESIGN.md
crates/gat-algo/src/: ac_opf.rs  alloc_kpi.rs  alloc_rents.rs  analytics_ds.rs  analytics_reliability.rs  arena.rs  canos_multiarea.rs  elcc.rs  featurize_geo.rs  featurize_gnn.rs  featurize_kpi.rs  geo_join.rs  gpu_monte_carlo.rs  io.rs  lib.rs  power_flow.rs  reliability_monte_carlo.rs  test_utils.rs  validation.rs
crates/gat-algo/src/contingency/: lodf.rs  mod.rs  n_k.rs
crates/gat-algo/src/graph/: mod.rs  partition.rs
crates/gat-algo/src/opf/: admm.rs  dc_opf.rs  dispatch.rs  dispatcher.rs  economic.rs  export.rs  gpu_branch_flow.rs  merit_order.rs  mod.rs  native_dispatch.rs  registry.rs  socp.rs  traits.rs  types.rs
crates/gat-algo/src/power_flow/: ac_pf.rs  cpf.rs  fast_decoupled.rs  legacy.rs  mod.rs  q_limits.rs
crates/gat-algo/src/sparse/: incremental.rs  mod.rs  sensitivity.rs  susceptance.rs  ybus.rs
crates/gat-algo/src/tep/: mod.rs  problem.rs  solution.rs  solver.rs
crates/gat-algo/src/workflows/: mod.rs  power_flow.rs
crates/gat-algo/tests/: ac_nlp_power.rs  ac_nlp_ybus.rs  ac_opf.rs  canos_multiarea.rs  dc_opf.rs  debug_case118.rs  gpu_branch_flow_equivalence.rs  native_dispatch.rs  reliability_benchmarks.rs  reliability_monte_carlo.rs  socp.rs  solver_dispatch.rs  sparse_deprecation_test.rs  strategy_pattern.rs  test_clarabel_exact_mimic.rs  test_clarabel_minimal.rs
crates/gat-batch/: Cargo.toml  README.md
crates/gat-batch/src/: job.rs  lib.rs  manifest.rs  runner.rs
crates/gat-cli/: Cargo.toml  README.md
crates/gat-cli/src/: cli.rs  common.rs  dataset.rs  docs.rs  lib.rs  main.rs  manifest.rs  runs.rs
crates/gat-cli/src/commands/: adms.rs  analytics.rs  completions.rs  convert.rs  derms.rs  dist.rs  doctor.rs  graph.rs  gui.rs  import.rs  inspect.rs  mod.rs  nminus1.rs  opf.rs  pf.rs  se.rs  solver.rs  telemetry.rs  tep.rs  ts.rs  tui.rs  util.rs  validate.rs  version.rs  viz.rs
crates/gat-cli/src/install/: component.rs  config.rs  gat_home.rs  github.rs  installer.rs  mod.rs  solvers_state.rs
crates/gat-cli/tests/: benchmark_opfdata.rs  benchmark_pfdelta.rs  benchmark_pglib.rs  cli.rs  multiarea_cli.rs  opf_admm_cli.rs  pf_output_format_cli.rs  tep_cli.rs
crates/gat-clp/: Cargo.toml  build.rs
crates/gat-clp/src/: main.rs
crates/gat-clp/tests/: integration.rs
crates/gat-coinor-build/: Cargo.toml
crates/gat-coinor-build/src/: lib.rs
crates/gat-dist/: Cargo.toml  README.md
crates/gat-dist/src/: lib.rs
crates/gat-gpu/: Cargo.toml
crates/gat-gpu/benches/: gpu_benchmarks.rs
crates/gat-gpu/src/: buffers.rs  context.rs  dispatch.rs  lib.rs
crates/gat-gpu/src/kernels/: mod.rs  runner.rs
crates/gat-gpu/src/shaders/: branch_flow.rs  contingency.rs  mod.rs  monte_carlo.rs  power_flow.rs  sensitivity.rs
crates/gat-gui/: Cargo.toml  README.md  package.json
crates/gat-gui/src/: lib.rs
crates/gat-gui/src-tauri/: Cargo.toml  tauri.conf.json
crates/gat-gui/src-tauri/src/: commands.rs  lib.rs  main.rs  service.rs  state.rs
crates/gat-gui/src/lib/: ArchitectureDiagram.svelte  BatchJobPane.svelte  CommandBuilder.svelte  ConfigPane.svelte  EducationDrawer.svelte  GridView.svelte  NotebookPane.svelte  PtdfPanel.svelte  QuickActions.svelte  WorkflowsPane.svelte  YbusExplorer.svelte
crates/gat-gui/src/routes/: +layout.svelte  +page.svelte
crates/gat-io/: Cargo.toml  README.md
crates/gat-io/benches/: arrow_benchmarks.rs
crates/gat-io/src/: arrow_manifest.rs  arrow_schema.rs  arrow_validator.rs  importers.rs  lib.rs  validate.rs  wasm_parsers.rs
crates/gat-io/src/export/: mod.rs  solution.rs
crates/gat-io/src/exporters/: arrow_directory_reader.rs  arrow_directory_writer.rs  metadata.rs  mod.rs  psse.rs
crates/gat-io/src/helpers/: arrow_validator.rs  conversions.rs  diagnostics.rs  mod.rs  network_builder.rs  network_validator.rs  path_security.rs
crates/gat-io/src/importers/: arrow.rs  arrow_disabled.rs  cim.rs  cim_validator.rs  format.rs  matpower.rs  matpower_parser.rs  mod.rs  pandapower.rs  powermodels.rs  psse.rs  tests.rs
crates/gat-io/src/sources/: cigre.rs  eia.rs  ember.rs  mod.rs  (+6 more)
crates/gat-ipopt/: Cargo.toml  README.md  build.rs
crates/gat-ipopt-sys/: Cargo.toml  build.rs
crates/gat-ipopt-sys/src/: lib.rs  wrapper.rs
crates/gat-ipopt/src/: main.rs
crates/gat-mcp-docs/: Cargo.toml
crates/gat-mcp-docs/src/: main.rs
crates/gat-scenarios/: Cargo.toml  README.md
crates/gat-scenarios/src/: apply.rs  lib.rs  manifest.rs  spec.rs
crates/gat-solver-common/: Cargo.toml  README.md
crates/gat-solver-common/src/: error.rs  ipc.rs  lib.rs  plugin.rs  problem.rs  solution.rs  subprocess.rs
crates/gat-ts/: Cargo.toml
crates/gat-ts/src/: lib.rs
crates/gat-tui/: Cargo.toml  README.md
crates/gat-tui/examples/: barchart_demo.rs  graph_demo.rs  progress_demo.rs  render_diagnostic.rs  tuirealm_minimal.rs
crates/gat-tui/src/: app.rs  catalog.rs  command_runner.rs  data.rs  demo_stats.rs  events.rs  integration.rs  layout.rs  lib.rs  main.rs  message.rs  modal_examples.rs  modal_renderer.rs  modals.rs  models.rs  navigation.rs  pane_components.rs  theme.rs  update.rs
crates/gat-tui/tests/: interactive.rs  real_world.rs  terminal_simulation.rs  theme_selection.rs  tui.rs  unicode_support.rs  visual_output.rs
crates/gat-ui-common/: Cargo.toml
crates/gat-ui-common/src/: analysis.rs  config.rs  error.rs  events.rs  jobs.rs  lib.rs  service.rs  workspace.rs
crates/gat-wasm/: Cargo.toml
crates/gat-wasm/src/: arrow_export.rs  lib.rs
xtask/: Cargo.toml
xtask/src/: main.rs
(+594 files in other folders)
