[workspace]
members = [
    "crates/gat-core",
    "crates/gat-io",
    "crates/gat-algo",
    "crates/gat-ts",
    "crates/gat-viz",
    "crates/gat-cli",
    "crates/gat-gui",
    "crates/gat-tui",
    "crates/gat-dist",
    "crates/gat-derms",
    "crates/gat-adms",
    "crates/gat-schemas",
    "crates/gat-scenarios",
    "crates/gat-batch",
    "crates/iocraft",
    "xtask",
    "crates/gat-mcp-docs",
]
default-members = [
    "crates/gat-core",
    "crates/gat-io",
    "crates/gat-algo",
    "crates/gat-ts",
    "crates/gat-viz",
    "crates/gat-cli",
    "crates/gat-dist",
    "crates/gat-derms",
    "crates/gat-adms",
    "crates/gat-schemas",
    "crates/gat-scenarios",
    "crates/gat-batch",
    "xtask",
    "crates/gat-mcp-docs",
]
resolver = "2" # See https://doc.rust-lang.org/cargo/reference/workspaces.html#the-resolver-field

[profile.dev]
opt-level = 1

[profile.release]
opt-level = 3

[workspace.metadata.release]
version = "0.3.4"
