[package]
name = "xtask"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
clap = { version = "4.0", features = ["derive"] }
clap-markdown = "0.1.5"
clap_mangen = "0.2.31"
serde_json = "1.0"
walkdir = "2.3"
gat-cli = { path = "../crates/gat-cli" }
chrono = "0.4"
serde = { version = "1.0", features = ["derive"] }
