[package]
name = "gat-algo"
version = "0.5.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
chrono = { version = "0.4", features = ["serde"] }
csv = "1.4"
gat-core = { path = "../gat-core" }
gat-solver-common = { path = "../gat-solver-common", optional = true }
good_lp = { version = "1.14", default-features = false }
sprs = "0.11"
faer = "0.17"
num-complex = "0.4"
polars = { version = "0.35", default-features = false }
rayon = "1.7"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
clarabel = { version = "0.11", default-features = false }
argmin = "0.10"
argmin-math = { version = "0.4", features = ["vec"] }
dirs = { version = "5.0", optional = true }
# Native IPOPT bindings from vendored sources
gat-ipopt-sys = { path = "../gat-ipopt-sys", optional = true }

[dev-dependencies]
tempfile = "3"
gat-io = { path = "../gat-io" }

[features]
default = [
    "solver-clarabel",
    "polars-lazy",
    "polars-parquet",
    "polars-ipc",
]

# Pure-Rust solvers only (no native FFI dependencies)
all-solvers = ["solver-clarabel", "solver-highs"]
# All solvers including IPOPT FFI (requires libipopt.so at runtime)
all-solvers-native = ["all-solvers", "solver-ipopt"]
native-dispatch = ["gat-solver-common", "dirs"]
all-polars = ["polars-lazy", "polars-parquet", "polars-ipc"]
# Full feature set without native FFI dependencies (CI-safe)
full = ["all-solvers", "all-polars"]
# Full feature set WITH native FFI (requires IPOPT at runtime)
full-native = ["all-solvers-native", "all-polars"]

solver-clarabel = ["good_lp/clarabel"]
solver-highs = ["good_lp/highs"]
# DEPRECATED: Use native-dispatch + gat-cbc instead. Requires system CBC install.
solver-coin_cbc = ["good_lp/coin_cbc"]
solver-ipopt = ["gat-ipopt-sys"]

polars-lazy = ["polars/lazy"]
polars-parquet = ["polars/parquet"]
polars-ipc = ["polars/ipc"]
