[package]
name = "gat-batch"
version = "0.5.4"
edition = "2021"

[dependencies]
anyhow = "1"
chrono = { version = "0.4", features = ["serde"] }
gat-algo = { path = "../gat-algo" }
gat-core = { path = "../gat-core" }
gat-io = { path = "../gat-io" }
gat-scenarios = { path = "../gat-scenarios" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rayon = "1"
num_cpus = "1"
[dev-dependencies]
tempfile = "3"
