[package]
name = "gat-cli"
version = "0.5.0"
edition = "2021"

[features]
default = ["full-io", "minimal", "viz"]
docs = ["schemars", "clap-markdown", "clap_mangen"]
minimal-io = ["gat-io/minimal", "gat-ts/minimal"]
full-io = ["gat-io/full", "gat-ts/full"]
gui = ["dep:gat-gui", "dep:gat-notebook"]
tui = ["dep:gat-tui"]
viz = ["dep:gat-viz"]
all-backends = [
    "solver-clarabel",
    "solver-highs",
    "polars-lazy",
    "polars-parquet",
    "polars-ipc",
]
minimal = ["solver-clarabel", "polars-lazy", "polars-parquet", "polars-ipc"]
solver-clarabel = ["gat-algo/solver-clarabel"]
solver-highs = ["gat-algo/solver-highs"]
solver-ipopt = ["gat-algo/solver-ipopt"]
native-dispatch = ["gat-algo/native-dispatch"]
# DEPRECATED: Use native-dispatch + gat-cbc instead. Requires system CBC install.
solver-coin_cbc = ["gat-algo/solver-coin_cbc"]
polars-lazy = ["gat-algo/polars-lazy"]
polars-parquet = ["gat-algo/polars-parquet"]
polars-ipc = ["gat-algo/polars-ipc"]

[dependencies]
gat-core = { path = "../gat-core" }
gat-io = { path = "../gat-io" }
gat-scenarios = { path = "../gat-scenarios" }
gat-algo = { path = "../gat-algo", default-features = false }
gat-ts = { path = "../gat-ts" }
gat-dist = { path = "../gat-dist" }
gat-derms = { path = "../gat-derms" }
gat-adms = { path = "../gat-adms" }
gat-schemas = { path = "../gat-schemas" }
gat-batch = { path = "../gat-batch" }
gat-viz = { path = "../gat-viz", optional = true }
gat-gui = { path = "../gat-gui", optional = true }
gat-notebook = { path = "../gat-notebook", optional = true }
gat-tui = { path = "../gat-tui", optional = true }
dirs = "4"
clap = { version = "4.0", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = "0.3"
anyhow = "1.0"
rayon = "1.7"
num_cpus = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"
uuid = { version = "1.5", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
sha2 = "0.10"
schemars = { version = "0.8", optional = true }
walkdir = "2"
tabwriter = "1.2"
clap_complete = "4"
ureq = "2"
zip = "0.6"
clap-markdown = { version = "0.1.5", optional = true }
clap_mangen = { version = "0.2.31", optional = true }
polars = { version = "0.35", default-features = false, features = ["lazy", "csv", "parquet"] }
csv = "1.4.0"
tempfile = "3"
libc = "0.2"

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
