[package]
name = "gat-clp"
version = "0.5.4"
edition = "2021"
description = "CLP LP solver wrapper for GAT native solver plugin system"
license = "MIT OR Apache-2.0"
build = "build.rs"

# This is a binary crate that implements the GAT solver IPC protocol
[[bin]]
name = "gat-clp"
path = "src/main.rs"

[dependencies]
gat-solver-common = { path = "../gat-solver-common" }
anyhow = "1.0"
thiserror.workspace = true
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[build-dependencies]
gat-coinor-build = { path = "../gat-coinor-build" }

[dev-dependencies]
tempfile = "3"
