[package]
name = "gat-coinor-build"
version = "0.5.4"
edition = "2021"
description = "Build infrastructure for COIN-OR libraries from vendored sources"
license = "MIT OR Apache-2.0"

# This is a library crate used by build.rs scripts and xtask
[lib]
name = "gat_coinor_build"
path = "src/lib.rs"

[dependencies]
anyhow = "1.0"
cc = "1.0"
zip = { version = "2.2", default-features = false, features = ["deflate"] }
walkdir = "2.5"
