[package]
name = "gat-gui"
version = "0.5.5"
edition = "2021"
description = "GUI launcher for GAT notebooks and the desktop application"
readme = "README.md"

[dependencies]
gat-core = { path = "../gat-core" }
gat-viz = { path = "../gat-viz" }
gat-notebook = { path = "../gat-notebook" }
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }

[dev-dependencies]
tempfile = "3"
