[package]
name = "gat-io"
version = "0.5.7"
edition = "2021"

[features]
default = ["native-io", "ipc"]
native-io = ["polars"]
minimal = ["native-io"]
parquet = ["polars", "polars/parquet"]
ipc = ["polars", "polars/ipc"]
full = ["parquet", "ipc"]
powergraph = ["matfile"]

# WASM/WASI-safe mode: no Polars/Arrow/Parquet compiled
wasm = []

[dependencies]
anyhow = "1.0"
arrow-schema = "54"
caseformat = { version = "0.1", default-features = false }
gat-core = { path = "../gat-core" }
thiserror.workspace = true
# Note: polars unused when building with feature `wasm`
polars = { version = "0.35", default-features = false, features = ["lazy", "csv"], optional = true }
power_flow_data = "0.1"
quick-xml = "0.31"
serde = { version = "1.0", features = ["derive"] }
sophia = "0.8"
zip = { version = "0.6", default-features = false, features = ["deflate"] }
serde_json = "1.0"
ureq = { version = "2.10", features = ["json"] }
chrono = { version = "0.4.42", features = ["serde"] }
semver = "1.0"
sha2 = "0.10"
rand = { version = "0.8", features = ["std_rng"] }
matfile = { version = "0.5", optional = true }

[dev-dependencies]
tempfile = "3"
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "arrow_benchmarks"
harness = false
