[package]
name = "gat-io"
version = "0.5.7"
edition = "2021"

[features]
default = ["native-io", "ipc"]
native-io = ["polars", "ureq", "rand", "sha2", "zip", "csv"]
minimal = ["native-io"]
parquet = ["polars", "polars/parquet", "dep:arrow", "dep:parquet"]
ipc = ["polars", "polars/ipc"]
full = ["parquet", "ipc"]
powergraph = ["matfile"]

# WASM/WASI-safe mode: no Polars/Arrow/Parquet compiled
wasm = []

[dependencies]
anyhow = "1.0"
arrow = { version = "54", default-features = false, optional = true }
arrow-schema = "54"
caseformat = { version = "0.1", default-features = false }
csv = { version = "1.3", optional = true }
gat-core = { path = "../gat-core" }
parquet = { version = "54", default-features = false, optional = true }
thiserror.workspace = true
# Note: polars unused when building with feature `wasm`
polars = { version = "0.35", default-features = false, features = ["lazy", "csv"], optional = true }
power_flow_data = "0.1"
quick-xml = "0.31"
serde = { version = "1.0", features = ["derive"] }
sophia = "0.8"
serde_json = "1.0"
chrono = { version = "0.4.42", features = ["serde"] }
semver = "1.0"

# Optional native-io dependencies (not WASM-safe)
zip = { version = "0.6", default-features = false, features = ["deflate"], optional = true }
ureq = { version = "2.10", features = ["json"], optional = true }
sha2 = { version = "0.10", optional = true }
rand = { version = "0.8", features = ["std_rng"], optional = true }
matfile = { version = "0.5", optional = true }

[dev-dependencies]
gat-algo = { path = "../gat-algo" }
tempfile = "3"
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "arrow_benchmarks"
harness = false
