[package]
name = "gat-ipopt"
version = "0.5.3"
edition = "2021"
description = "IPOPT solver wrapper for GAT native solver plugin system"
license = "MIT OR Apache-2.0"
readme = "README.md"

# This is a binary crate that implements the GAT solver IPC protocol
[[bin]]
name = "gat-ipopt"
path = "src/main.rs"

[dependencies]
gat-solver-common = { path = "../gat-solver-common" }
gat-algo = { path = "../gat-algo" }
gat-core = { path = "../gat-core" }
anyhow = "1.0"
thiserror = "2.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Native IPOPT bindings from vendored sources (no crates.io deps needed)
gat-ipopt-sys = { path = "../gat-ipopt-sys", optional = true }

[features]
default = []
# Enable IPOPT solver support (uses vendored IPOPT)
ipopt-sys = ["gat-ipopt-sys", "gat-algo/solver-ipopt"]

[dev-dependencies]
tempfile = "3"
