[package]
name = "gat-mcp-docs"
version = "0.5.2"
edition = "2021"

[dependencies]
anyhow = "1.0"
axum = "0.7"
clap = { version = "4.0", features = ["derive"] }
mime_guess = "2.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.30", features = ["macros", "rt-multi-thread"] }
walkdir = "2.3"
