[package]
name = "gat-scenarios"
version = "0.5.0"
edition = "2021"

[dependencies]
anyhow = "1"
chrono = { version = "0.4", features = ["serde"] }
gat-core = { path = "../gat-core" }
gat-io = { path = "../gat-io" }
petgraph = "0.6"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
uuid = { version = "1", features = ["v4"] }
[dev-dependencies]
tempfile = "3"
