[package]
name = "gat-solver-common"
version = "0.4.0"
edition = "2021"
description = "Common types and IPC protocol for GAT solver plugins"

[features]
default = []

[dependencies]
anyhow = "1.0"
arrow = { version = "54", default-features = false, features = ["ipc", "prettyprint"] }
serde = { version = "1.0", features = ["derive"] }
thiserror = "2.0"
tokio = { version = "1", features = ["process", "io-util", "time"] }
dirs = "5.0"
which = "7.0"

[dev-dependencies]
tempfile = "3"
