[package]
name = "gat-solver-common"
version = "0.5.4"
edition = "2021"
description = "Common types and IPC protocol for GAT solver plugins"

[features]
default = []

[dependencies]
anyhow = "1.0"
arrow = { version = "54", default-features = false, features = ["ipc", "prettyprint"] }
serde = { version = "1.0", features = ["derive"] }
thiserror.workspace = true
tokio = { version = "1", features = ["process", "io-util", "time"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
dirs = "5.0"
which = "7.0"

[dev-dependencies]
tempfile = "3"
