[package]
name = "gat-ts"
version = "0.3.1"
edition = "2021"

[features]
default = ["minimal"]
minimal = []
parquet = ["polars/parquet"]
temporal = ["polars/temporal"]
full = ["parquet", "temporal"]

[dependencies]
gat-core = { path = "../gat-core" }
anyhow = "1.0"
polars = { version = "0.35", default-features = false, features = ["lazy", "csv"] }

[dev-dependencies]
tempfile = "3"
