[package]
name = "gat-tui"
version = "0.1.3"
edition = "2021"
authors = ["Grid Team <grid@example.com>"]
description = "Terminal UI for inspecting GAT workflows"
license = "MIT OR Apache-2.0"

[dependencies]
anyhow = "1.0"
iocraft = { path = "../iocraft" }
termios = "0.3"
libc = "0.2"
once_cell = "1.19"
tokio = { version = "1", features = ["full"] }
crossterm = "0.27"
tuirealm = "1.4"
tui-realm-stdlib = "3.0"
ratatui = "0.27"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
