[package]
name = "gat-tui"
version = "0.3.2"
edition = "2021"
authors = ["Grid Team <grid@example.com>"]
description = "Terminal UI for inspecting GAT workflows"
license = "MIT OR Apache-2.0"

[features]
default = ["fancy-ui"]
fancy-ui = []  # Visual enhancements: graphs, charts, animations
minimal = []   # Stripped down build for minimal footprint

[dependencies]
anyhow = "1.0"
iocraft = { path = "../iocraft" }
termios = "0.3"
libc = "0.2"
once_cell = "1.19"
tokio = { version = "1", features = ["full"] }
crossterm = "0.27"
tuirealm = "3.2"
tui-realm-stdlib = "3.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Logging (for async-aware diagnostics)
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt", "json"] }
tracing-appender = "0.2"

# ID generation (for unique task/command IDs)
uuid = { version = "1.0", features = ["v4", "serde"] }

# Time utilities (for timestamps and scheduling)
chrono = { version = "0.4", features = ["serde"] }

# Configuration management
toml = "0.8"
config = { version = "0.14", features = ["toml"] }

# Async utilities
futures = "0.3"
async-trait = "0.1"

# GAT core and IO integration
gat-core = { path = "../gat-core" }
gat-io = { path = "../gat-io", features = ["ipc"] }
gat-algo = { path = "../gat-algo" }

# Thread synchronization
parking_lot = "0.12"
