[package]
name = "gat-ui-common"
version = "0.5.4"
edition = "2021"
authors = ["Tom Anderson"]
description = "Shared UI services for GAT terminal and desktop interfaces"
license = "MIT OR Apache-2.0"
repository = "https://github.com/tganderson/gat"
keywords = ["power-systems", "ui", "async"]
categories = ["gui", "asynchronous"]

[dependencies]
# Core GAT crates
gat-core = { path = "../gat-core" }
gat-io = { path = "../gat-io" }
gat-algo = { path = "../gat-algo" }

# Async runtime
tokio = { version = "1", features = ["sync", "rt", "macros"] }

# Concurrency
dashmap = "6"
parking_lot = "0.12"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"

# Configuration
dirs = "5"

# Error handling
thiserror = "2"
anyhow = "1"

# Utilities
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
tracing = "0.1"

[dev-dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
tempfile = "3"
