[package]
name = "gat-wasm"
version = "0.5.7"
edition = "2021"
description = "WASM bindings for GAT web interface"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]
console_error_panic_hook = ["dep:console_error_panic_hook"]

[dependencies]
gat-core = { path = "../gat-core", default-features = false }
# gat-io with no default features gives us wasm_parsers module (MATPOWER parser)
gat-io = { path = "../gat-io", default-features = false }
# gat-algo with wasm feature for DC-OPF solver
gat-algo = { path = "../gat-algo", default-features = false, features = ["wasm"] }
# gat-viz for force-directed network layout (pure Rust, WASM-compatible)
gat-viz = { path = "../gat-viz" }
wasm-bindgen = "0.2"
serde = { version = "1", features = ["derive"] }
serde-wasm-bindgen = "0.6"
serde_json = "1"
console_error_panic_hook = { version = "0.1", optional = true }
# Required for WASM random number generation (used by argmin via rand)
getrandom = { version = "0.2", features = ["js"] }
# Arrow IPC for efficient, zero-copy data interchange with JavaScript
# Using features proven to work in parquet-wasm
arrow = { version = "56", default-features = false, features = ["ipc"] }

[dev-dependencies]
wasm-bindgen-test = "=0.3.42"
