[package]
name = "gat-gui-desktop"
version = "0.5.2"
description = "GAT GUI Desktop - Interactive Tauri-based power grid visualization and analysis"
authors = ["GAT Team"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "gat_gui_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Config file support
toml = "0.8"
dirs = "5"

# GAT crates
gat-core = { path = "../../gat-core" }
gat-io = { path = "../../gat-io" }
gat-algo = { path = "../../gat-algo" }
gat-batch = { path = "../../gat-batch" }

